Fix landing page spacing

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,12 @@ sub {
 	padding-top: 150px;
 }
 
+.woops {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 150px;
+}
 .major {
 	display: flex;
 	flex-direction: column;
@@ -180,6 +186,10 @@ sub {
 	font-family: 'Train One';
 }
 
+.scholarships {
+	text-align: right !important;
+}
+
 .content-section {
 	margin-top: 40px;
 }
@@ -190,11 +200,6 @@ sub {
 
 .content-section h2 {
 	margin: 20px 0px;
-}
-
-.content-section p {
-	text-align: justify;
-	text-justify: inter-word;
 }
 
 .research {
@@ -257,12 +262,20 @@ sub {
 
 @media screen and (max-width: 768px) {
 
+	.home-container {
+		padding-top: 80px;
+	}
+
 	.container {
 		padding-top: 100px;
 	}
 
 	.page-links {
-		font-size: 12px;
+		font-size: 15px;
+	}
+
+	.page-links ul li {
+		margin: 0px 10px;
 	}
 
 	.sidebar {
@@ -287,7 +300,7 @@ sub {
 
 	.content {
 		margin-left: 0px;
-		padding: 0px 25px;
+		padding: 0px 25px 40px 25px;
 		top: 0px;
 		width: revert;
 	}
@@ -310,4 +323,13 @@ sub {
 		display: block;
 		width: 100%;
 	}
+
+	.school {
+		margin-top: revert;
+	}
+
+	.houses {
+		margin-top: revert;
+	}
+
 }
